--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -41,7 +41,7 @@
             </intent-filter>
         </receiver>
 
-        <activity
+        <!--activity
             android:name=".dirac.DiracActivity"
             android:label="@string/dirac_title"
             android:exported="true"
@@ -53,6 +53,21 @@
                        android:value="com.android.settings.category.ia.sound" />
             <meta-data android:name="com.android.settings.summary"
                        android:resource="@string/dirac_summary" />
+        </activity-->
+
+        <activity
+            android:name=".dolby.DolbyActivity"
+            android:label="@string/dolby_title"
+            android:theme="@style/Theme.SubSettingsBase"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
+                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                       android:value="com.android.settings.category.ia.sound" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/dolby_summary" />
         </activity>
 
         <service
@@ -73,7 +88,7 @@
             </intent-filter>
         </service>
 
-        <service
+        <!--service
             android:name=".dirac.DiracTileService"
             android:exported="true"
             android:icon="@drawable/ic_headphone"
@@ -84,6 +99,17 @@
             </intent-filter>
             <meta-data android:name="android.service.quicksettings.TOGGLEABLE_TILE"
             android:value="true" />
+        </service-->
+
+        <service
+            android:name=".dolby.DolbyTileService"
+            android:icon="@drawable/ic_dolby_qs"
+            android:label="@string/dolby_title"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
         </service>
 
         <activity
